ApexWorkbook/src/objects/Review_Results__c.object
<CustomObject>
    <description>This holds the results of a code review and is related to the review request object and the apex class object.</description>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Class in reference to</inlineHelpText>
        <label>Apex Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Review_Request__c</field>
                <operation>equals</operation>
                <valueField>Apex_Class_List__c.Review_Request__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apex_Class_List__c</referenceTo>
        <relationshipLabel>Review Results</relationshipLabel>
        <relationshipName>Review_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fix_Color__c</fullName>
        <inlineHelpText>Criticality of issue - red must fix, yellow strongly recommend fixing, green general guidance / may not require fixing, other - unknown</inlineHelpText>
        <label>Fix Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fix_Level__c</fullName>
        <inlineHelpText>Level of issue type for fixes</inlineHelpText>
        <label>Fix Level</label>
        <picklist>
            <picklistValues>
                <fullName>Governor Limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Errors/Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Code Limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limits &amp; Complexity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Asserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empty Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Componentize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sufficient Test Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unused Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Useful Asserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleanup Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assumptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <inlineHelpText>What kind of an issue is this - if other, see notes</inlineHelpText>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>@Future in For Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign to Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assumption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assumptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare Size to 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidate Test Record Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyclomatic Complexity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debug Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declarations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete Entire Tables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DML Error Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DML in For Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmptyCatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empty Initializer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empty Methods/Constructors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expanded Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Comparisons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Local Variables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Private Constructors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>future method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard to Read Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Issue</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Number_s__c</fullName>
        <inlineHelpText>Line Numbers for issue found</inlineHelpText>
        <label>Line Number(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if issue reflects multiple classes, and one specified is just an example</inlineHelpText>
        <label>Multiple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <formula>Apex_Class__r.Object_Name__c</formula>
        <label>Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Fix_Issue__c</fullName>
        <inlineHelpText>If chose Other for Fix type, specify what it is here</inlineHelpText>
        <label>Other Fix Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Issue_Type__c</fullName>
        <inlineHelpText>Other issue type found</inlineHelpText>
        <label>Other Issue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Request__c</fullName>
        <label>Review Request</label>
        <referenceTo>Review_Request__c</referenceTo>
        <relationshipLabel>Review Results</relationshipLabel>
        <relationshipName>Review_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Suggested_Remediation_s__c</fullName>
        <inlineHelpText>What is suggested to be done about this issue</inlineHelpText>
        <label>Suggested Remediation(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Review Result</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Review Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>